# coder-agent-poc

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: backend-engineer.md  devops-engineer.md  doc-keeper.md  ml-engineer.md  orchestrator.md  qa-engineer.md  tech-lead.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
docs/: ARCHITECTURE.md  DECISIONS.md  RUNBOOK.md  SESSION_HANDOVER.md
docs/adr/: 0001-cloud-run-not-gke-for-poc.md  0002-llama-cpp-for-poc-model-server.md  0003-deepagents-as-agent-framework.md  0004-europe-west4-region.md  0005-uv-as-package-manager.md  0006-github-actions-for-ci.md  0007-no-database-for-poc.md  0008-qwen25-coder-15b-model.md  0009-strip-deepagents-for-poc-chat.md  0010-vllm-as-model-server-runtime.md  0011-cloud-run-l4-gpu.md  0012-reintroduce-deepagents.md  0013-qwen3-coder-30b-a3b-instruct-model.md  0014-consolidate-model-server-to-europe-west4.md  0015-billing-hard-cap.md  TEMPLATE.md
infra/terraform/: backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infra/terraform/modules/artifact_registry/: main.tf
infra/terraform/modules/billing_hard_cap/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/billing_hard_cap/function/: main.py
infra/terraform/modules/budget/: main.tf
infra/terraform/modules/cloud_run/: main.tf
infra/terraform/modules/cloud_run_gpu/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/iam/: main.tf
infra/terraform/modules/secret_manager/: main.tf
infra/terraform/modules/storage/: main.tf
scripts/: bootstrap-gcp.sh  build-and-push.sh  check-prereqs.sh  deploy.sh  dev.sh  setup-billing-alerts.sh  smoke-test.sh  teardown.sh
services/coder-agent/: Dockerfile  README.md  pyproject.toml
services/coder-agent/src/coder_agent/: __init__.py  agent.py  config.py  logging_setup.py  main.py
services/coder-agent/tests/: conftest.py  test_adr_0001_compliance.py  test_agent.py  test_config.py  test_integration.py  test_main.py
services/model-server/: .dockerignore  Dockerfile  README.md  cloudbuild.yaml  entrypoint.sh  pyproject.toml
services/model-server/scripts/: fetch_weights.py
services/model-server/tests/: conftest.py  test_entrypoint.py  test_fetch_weights.py  test_openai_contract.py
